--- a/_posts/2015-08-30-basics.md
+++ b/_posts/2015-08-30-basics.md
@@ -2,6 +2,7 @@
 layout: post
 title: Basic Markdown
 date: 2015-08-30
+excerpt: Some (multi)markdown testing with Jekyll and Lanyon
 categories: markdown
 tags:
     - tables
@@ -20,13 +21,17 @@ And a nice table. Nothing too fancy
 |  data   |  data   |  data   |
 |  data   |       data       ||
 
+A quote
+
+> If you find yourself in a hole, the first thing to do is stop diggin’. ~ Cowboy wisdom
+
 ## This is header 2
 
 Time for a footnote [^1].
 
 And how does `code`display?
 
-Time for a script
+And a script
 
 {% highlight py %}
 
